--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
         <profile>
             <id>prod</id>
             <properties>
-                <spring.profiles.active>prod</spring.profiles.active>
+                <spring.profiles.active>test</spring.profiles.active>
             </properties>
             <build>
                 <plugins>
